--- a/fpga/vivado/cwhusky.runs/impl_1/cwhusky_top.ltx
+++ b/fpga/vivado/cwhusky.runs/impl_1/cwhusky_top.ltx
@@ -533,7 +533,7 @@
                     },
                     {
                         "type": "ILA_V3",
-                        "name": "oadc/U_fifo/U_ila_long_fifo",
+                        "name": "oadc/U_fifo/U_ila_fifo_counts",
                         "spec": "labtools_ila_v6",
                         "ipName": "ila",
                         "core_location": {
@@ -541,7 +541,7 @@
                             "slave_index": 2,
                             "bscan_switch_index": 0
                         },
-                        "uuid": "941DFBE407FB5C16A0669052B8359D16",
+                        "uuid": "9298C225979E5E51AAA6F2E9A5EC06B1",
                         "pins": [
                             {
                                 "name": "probe0",
@@ -554,7 +554,7 @@
                                 "portIndex": 0,
                                 "nets": [
                                     {
-                                        "name": "oadc/U_fifo/slow_fifo_wr_1",
+                                        "name": "oadc/U_fifo/stream_segment_available_1",
                                         "isBus": false
                                     }
                                 ]
@@ -564,14 +564,73 @@
                                 "id": 26,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
-                                "isVector": false,
+                                "isVector": true,
                                 "leftIndex": 0,
-                                "rightIndex": 0,
+                                "rightIndex": 18,
                                 "portIndex": 1,
                                 "nets": [
                                     {
-                                        "name": "oadc/U_fifo/slow_fifo_rd_1",
-                                        "isBus": false
+                                        "name": "oadc/U_fifo/write_count_to_usb",
+                                        "isBus": true,
+                                        "subnets": [
+                                            {
+                                                "name": "oadc/U_fifo/write_count_to_usb[18]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/write_count_to_usb[17]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/write_count_to_usb[16]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/write_count_to_usb[15]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/write_count_to_usb[14]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/write_count_to_usb[13]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/write_count_to_usb[12]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/write_count_to_usb[11]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/write_count_to_usb[10]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/write_count_to_usb[9]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/write_count_to_usb[8]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/write_count_to_usb[7]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/write_count_to_usb[6]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/write_count_to_usb[5]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/write_count_to_usb[4]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/write_count_to_usb[3]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/write_count_to_usb[2]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/write_count_to_usb[1]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/write_count_to_usb[0]"
+                                            }
+                                        ]
                                     }
                                 ]
                             },
@@ -580,14 +639,73 @@
                                 "id": 27,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
-                                "isVector": false,
+                                "isVector": true,
                                 "leftIndex": 0,
-                                "rightIndex": 0,
+                                "rightIndex": 18,
                                 "portIndex": 2,
                                 "nets": [
                                     {
-                                        "name": "oadc/U_fifo/slow_fifo_full_1",
-                                        "isBus": false
+                                        "name": "oadc/U_fifo/read_count",
+                                        "isBus": true,
+                                        "subnets": [
+                                            {
+                                                "name": "oadc/U_fifo/read_count[18]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/read_count[17]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/read_count[16]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/read_count[15]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/read_count[14]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/read_count[13]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/read_count[12]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/read_count[11]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/read_count[10]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/read_count[9]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/read_count[8]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/read_count[7]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/read_count[6]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/read_count[5]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/read_count[4]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/read_count[3]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/read_count[2]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/read_count[1]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/read_count[0]"
+                                            }
+                                        ]
                                     }
                                 ]
                             },
@@ -602,7 +720,7 @@
                                 "portIndex": 3,
                                 "nets": [
                                     {
-                                        "name": "oadc/U_fifo/slow_fifo_empty_1",
+                                        "name": "oadc/U_fifo/slow_fifo_rd_1",
                                         "isBus": false
                                     }
                                 ]
@@ -618,7 +736,7 @@
                                 "portIndex": 4,
                                 "nets": [
                                     {
-                                        "name": "oadc/U_fifo/slow_fifo_overflow_1",
+                                        "name": "oadc/U_fifo/slow_fifo_wr_1",
                                         "isBus": false
                                     }
                                 ]
@@ -634,7 +752,7 @@
                                 "portIndex": 5,
                                 "nets": [
                                     {
-                                        "name": "oadc/U_fifo/slow_fifo_underflow_1",
+                                        "name": "oadc/U_fifo/slow_fifo_full_1",
                                         "isBus": false
                                     }
                                 ]
@@ -650,7 +768,7 @@
                                 "portIndex": 6,
                                 "nets": [
                                     {
-                                        "name": "oadc/U_fifo/stream_segment_available_1",
+                                        "name": "oadc/U_fifo/slow_fifo_empty_1",
                                         "isBus": false
                                     }
                                 ]
@@ -666,7 +784,7 @@
                                 "portIndex": 7,
                                 "nets": [
                                     {
-                                        "name": "oadc/U_fifo/fast_fifo_overflow",
+                                        "name": "oadc/U_fifo/slow_fifo_overflow_1",
                                         "isBus": false
                                     }
                                 ]
@@ -674,6 +792,180 @@
                             {
                                 "name": "probe8",
                                 "id": 33,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": false,
+                                "leftIndex": 0,
+                                "rightIndex": 0,
+                                "portIndex": 8,
+                                "nets": [
+                                    {
+                                        "name": "oadc/U_fifo/slow_fifo_underflow_1",
+                                        "isBus": false
+                                    }
+                                ]
+                            },
+                            {
+                                "name": "probe9",
+                                "id": 34,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": false,
+                                "leftIndex": 0,
+                                "rightIndex": 0,
+                                "portIndex": 9,
+                                "nets": [
+                                    {
+                                        "name": "oadc/U_fifo/error_flag",
+                                        "isBus": false
+                                    }
+                                ]
+                            }
+                        ]
+                    },
+                    {
+                        "type": "ILA_V3",
+                        "name": "oadc/U_fifo/U_ila_long_fifo",
+                        "spec": "labtools_ila_v6",
+                        "ipName": "ila",
+                        "core_location": {
+                            "user_chain": 1,
+                            "slave_index": 3,
+                            "bscan_switch_index": 0
+                        },
+                        "uuid": "941DFBE407FB5C16A0669052B8359D16",
+                        "pins": [
+                            {
+                                "name": "probe0",
+                                "id": 35,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": false,
+                                "leftIndex": 0,
+                                "rightIndex": 0,
+                                "portIndex": 0,
+                                "nets": [
+                                    {
+                                        "name": "oadc/U_fifo/slow_fifo_wr_2",
+                                        "isBus": false
+                                    }
+                                ]
+                            },
+                            {
+                                "name": "probe1",
+                                "id": 36,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": false,
+                                "leftIndex": 0,
+                                "rightIndex": 0,
+                                "portIndex": 1,
+                                "nets": [
+                                    {
+                                        "name": "oadc/U_fifo/slow_fifo_rd_2",
+                                        "isBus": false
+                                    }
+                                ]
+                            },
+                            {
+                                "name": "probe2",
+                                "id": 37,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": false,
+                                "leftIndex": 0,
+                                "rightIndex": 0,
+                                "portIndex": 2,
+                                "nets": [
+                                    {
+                                        "name": "oadc/U_fifo/slow_fifo_full_2",
+                                        "isBus": false
+                                    }
+                                ]
+                            },
+                            {
+                                "name": "probe3",
+                                "id": 38,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": false,
+                                "leftIndex": 0,
+                                "rightIndex": 0,
+                                "portIndex": 3,
+                                "nets": [
+                                    {
+                                        "name": "oadc/U_fifo/slow_fifo_empty_2",
+                                        "isBus": false
+                                    }
+                                ]
+                            },
+                            {
+                                "name": "probe4",
+                                "id": 39,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": false,
+                                "leftIndex": 0,
+                                "rightIndex": 0,
+                                "portIndex": 4,
+                                "nets": [
+                                    {
+                                        "name": "oadc/U_fifo/slow_fifo_overflow_2",
+                                        "isBus": false
+                                    }
+                                ]
+                            },
+                            {
+                                "name": "probe5",
+                                "id": 40,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": false,
+                                "leftIndex": 0,
+                                "rightIndex": 0,
+                                "portIndex": 5,
+                                "nets": [
+                                    {
+                                        "name": "oadc/U_fifo/slow_fifo_underflow_2",
+                                        "isBus": false
+                                    }
+                                ]
+                            },
+                            {
+                                "name": "probe6",
+                                "id": 41,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": false,
+                                "leftIndex": 0,
+                                "rightIndex": 0,
+                                "portIndex": 6,
+                                "nets": [
+                                    {
+                                        "name": "oadc/U_fifo/stream_segment_available_2",
+                                        "isBus": false
+                                    }
+                                ]
+                            },
+                            {
+                                "name": "probe7",
+                                "id": 42,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": false,
+                                "leftIndex": 0,
+                                "rightIndex": 0,
+                                "portIndex": 7,
+                                "nets": [
+                                    {
+                                        "name": "oadc/U_fifo/fast_fifo_overflow",
+                                        "isBus": false
+                                    }
+                                ]
+                            },
+                            {
+                                "name": "probe8",
+                                "id": 43,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -696,14 +988,14 @@
                         "ipName": "ila",
                         "core_location": {
                             "user_chain": 1,
-                            "slave_index": 3,
+                            "slave_index": 4,
                             "bscan_switch_index": 0
                         },
                         "uuid": "191367044E705964B9613360323B4B60",
                         "pins": [
                             {
                                 "name": "probe0",
-                                "id": 34,
+                                "id": 44,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -714,13 +1006,13 @@
                                     {
                                         "name": "oadc/U_fifo/reset",
                                         "isBus": false,
-                                        "parentNetId": 59
+                                        "parentNetId": 105
                                     }
                                 ]
                             },
                             {
                                 "name": "probe1",
-                                "id": 35,
+                                "id": 45,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": true,
@@ -846,7 +1138,7 @@
                             },
                             {
                                 "name": "probe2",
-                                "id": 36,
+                                "id": 46,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -862,7 +1154,7 @@
                             },
                             {
                                 "name": "probe3",
-                                "id": 37,
+                                "id": 47,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -878,7 +1170,7 @@
                             },
                             {
                                 "name": "probe4",
-                                "id": 38,
+                                "id": 48,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": true,
@@ -1004,7 +1296,7 @@
                             },
                             {
                                 "name": "probe5",
-                                "id": 39,
+                                "id": 49,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -1020,7 +1312,7 @@
                             },
                             {
                                 "name": "probe6",
-                                "id": 40,
+                                "id": 50,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -1036,7 +1328,7 @@
                             },
                             {
                                 "name": "probe7",
-                                "id": 41,
+                                "id": 51,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -1052,7 +1344,7 @@
                             },
                             {
                                 "name": "probe8",
-                                "id": 42,
+                                "id": 52,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -1068,7 +1360,7 @@
                             },
                             {
                                 "name": "probe9",
-                                "id": 43,
+                                "id": 53,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -1084,7 +1376,7 @@
                             },
                             {
                                 "name": "probe10",
-                                "id": 44,
+                                "id": 54,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -1100,7 +1392,7 @@
                             },
                             {
                                 "name": "probe11",
-                                "id": 45,
+                                "id": 55,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -1116,7 +1408,7 @@
                             },
                             {
                                 "name": "probe12",
-                                "id": 46,
+                                "id": 56,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -1132,7 +1424,7 @@
                             },
                             {
                                 "name": "probe13",
-                                "id": 47,
+                                "id": 57,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": true,
@@ -1162,7 +1454,7 @@
                             },
                             {
                                 "name": "probe14",
-                                "id": 48,
+                                "id": 58,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -1178,7 +1470,7 @@
                             },
                             {
                                 "name": "probe15",
-                                "id": 49,
+                                "id": 59,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -1232,7 +1524,7 @@
                         ]
                     },
                     {
-                        "id": 59,
+                        "id": 105,
                         "name": "oadc/U_reg_openadc/SR[0]",
                         "state_reg": [
                             {
